Text-align fixes

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -169,8 +169,11 @@ body{
 #academics_careers-wrapper > #academics {
   padding: 15px;
   width: 50%;
-  text-align: center;
+  text-align: justify;
   background-color: whitesmoke;
+}
+#academics_careers-wrapper > #academics > h2 {
+  text-align: center;
 }
 #academics_careers-wrapper > #academics a:link {
   color: black;
@@ -289,14 +292,15 @@ body{
   flex-flow: row wrap;
   background-color: #333333;
   color: whitesmoke;
-  text-align: center;
 }
 #about_contact_footer-wrapper h2 {
   color: red;
+  text-align: center;
 }
 #about_contact_footer-wrapper > #about {
   width: 50%;
   padding: 20px 60px;
+  text-align: justify;
 }
 #about_contact_footer-wrapper > #about > p > a:link {
   color: whitesmoke;
@@ -313,6 +317,7 @@ body{
 #about_contact_footer-wrapper > #contact {
   width: 50%;
   padding: 20px 60px;
+  text-align: center;
 }
 #about_contact_footer-wrapper > #contact a:link {
   color: whitesmoke;
